--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,15 +12,21 @@
   -->
   <link rel="stylesheet" href="/css/application.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="js/application.js"></script>
 
   <title>Where's the (🐶) Love?</title>
 
+  <% if logged_in? %>
     <p>
-      <a href="/login">Login</a> | <a href="/users/new">Register</a><br>
-      <a href="/">Home</a>
+      <a href="/login" id="login">Login</a> | <a href="/users/new" id="register">Register</a><br>
     </p>
+  <% else %>
+    <p>
+      <a href="/logout" id="logout">Logout</a>
+    </p>
+  <% end %>
+  <a href="/" id="home">Home</a>
 </head>
 <body>
   <%= yield %>
