--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,6 @@
 <br>
 <form action="/login" method="post">
-    <input type="text" name="email" placeholder="email">
+    <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
     <input type="submit" value="submit">
 </form>
