--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,6 +1,5 @@
 <form action="/users" method="post">
-    <input type="text" name="user[first_name]" placeholder="first name">
-    <input type="text" name="user[last_name]" placeholder="last name">
+    <input type="text" name="user[username]" placeholder="username">
     <input type="text" name="user[email]" placeholder="email">
     <input type="password" name="user[password]" placeholder="password">
     <input type="password" name="password_confirm" placeholder="confirm password">
