Add login and logout ajax features

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,7 +1,7 @@
 <br>
-<form action="/login" method="post">
+<form action="/login" method="post" id="form">
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
-    <input type="submit" value="submit">
+    <input type="submit" value="login" id="login-button">
 </form>
 <br>
