--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,8 +12,8 @@
   -->
   <link rel="stylesheet" href="/css/application.css">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="js/application.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="/js/application.js"></script>
 
   <title>Where's the (🐶) Love?</title>
 
@@ -29,6 +29,8 @@
   <a href="/" id="home">Home</a>
 </head>
 <body>
+  <div class="container">
   <%= yield %>
+  </div>
 </body>
 </html>
