--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,4 +1,4 @@
-<form action="/users" method="post">
+<form action="/users" method="post" class="login-form">
     <input type="text" name="user[username]" placeholder="username">
     <input type="text" name="user[email]" placeholder="email">
     <input type="password" name="user[password]" placeholder="password">
