Add Flickr API function to page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,6 @@
 <h1>Where's the (🐶) Love?</h1>
 <div class="container">
-  
+  <button type="button">show pups</button>
+</div>
+<div class="gallery">
 </div>
