--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,7 +1,7 @@
 <br>
 <form action="/login" method="post" id="form">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <input type="submit" value="login" id="login-button">
+    <input type="text" name="username" placeholder="username"><br>
+    <input type="password" name="password" placeholder="password"><br>
+    <input type="submit" value="login" id="login">
 </form>
 <br>
