--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,7 +1,7 @@
-<form action="/users" method="post" class="login-form">
-    <input type="text" name="user[username]" placeholder="username">
-    <input type="text" name="user[email]" placeholder="email">
-    <input type="password" name="user[password]" placeholder="password">
-    <input type="password" name="password_confirm" placeholder="confirm password">
-    <input type="submit" value="submit">
+<form action="/users" method="POST" id="new-user">
+    <input type="text" name="user[username]" placeholder="username"><br>
+    <input type="text" name="user[email]" placeholder="email"><br>
+    <input type="password" name="user[password]" placeholder="password"><br>
+    <input type="password" name="password_confirm" placeholder="confirm password"><br>
+    <input type="submit" value="submit" id="reg-button">
 </form>
