--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,6 @@
 <h1>Where's the (🐶) Love?</h1>
 <div class="container">
-  <% @lat = 37.80 %>
-  <% @lon = -122.25 %>
-  <a href="https://api.flickr.com/services/rest/?method=flickr.photos.search&api_key=<%= ENV['FLICKR_KEY'] %>&tags=puppies%2C+dogs&per_page=20&page=1&lat=" class="display-pups">show pups 🐶</a>
-
+  <a href="https://api.flickr.com/services/rest/?method=flickr.photos.search&api_key=<%= ENV['FLICKR_KEY'] %>&tags=puppies%2C+puppy&per_page=20&page=1&lat=" class="display-pups">show pups 🐶</a>
 </div>
 <div class="gallery cf">
-
 </div>
