Add CSS styling to input fields

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -122,10 +122,12 @@ a.show, a.display-pups {
   font-weight: 600;
 }
 
-form {
-  color: #545454;
-}
-
 input {
+  background: transparent;
+  border: none;
+  border-bottom: 1px dashed #83A4C5;
+  width: 275px;
+  outline: none;
+  padding: 0px 0px 0px 0px;
   margin: 2px;
 }
