Add formatting to forms

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -5,3 +5,4 @@
     <input type="password" name="password_confirm" placeholder="confirm password"><br>
     <input type="submit" value="submit" id="reg-button">
 </form>
+</body>
