--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,5 +1,5 @@
 <br>
-<form action="/login" method="POST" id="form">
+<form action="/login" method="POST" id="login-form">
     <input type="text" name="username" placeholder="username"><br>
     <input type="password" name="password" placeholder="password"><br>
     <input type="submit" value="login" id="login">
